--- a/help/using/docs-updates/docs-2017.md
+++ b/help/using/docs-updates/docs-2017.md
@@ -1,6 +1,6 @@
 ---
-description: liste de documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: liste de documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+description: Liste de documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+seo-description: Liste de documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 seo-title: Mises à jour de la documentation 2017
 solution: Audience Manager
 title: Mises à jour de la documentation 2017
@@ -17,11 +17,11 @@ ht-degree: 25%
 
 # Mises à jour de la documentation 2017 {#documentation-updates}
 
-liste de documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+Liste de documents nouveaux ou révisés publiés en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
 Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
-## December, 2017 {#dec-17}
+## Décembre 2017 {#dec-17}
 
 <table id="table_366914EEDA294636A580F706AFC57ACC"> 
  <thead> 
@@ -42,7 +42,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## November, 2017 {#nov-17}
+## Novembre 2017 {#nov-17}
 
 <table id="table_6AAE9EF4DE76467FAFEDAB418B5A0207"> 
  <thead> 
@@ -54,7 +54,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>À des fins de référence, nous avons ajouté les attributs réservés <code> d_dst_filter</code> et <code> d_rs</code> aux attributs <code> d_</code> documentés. Nous vous déconseillons de créer des caractéristiques qui utilisent des attributs réservés. Adobe peut modifier les attributs réservés à tout moment. </p> </td> 
+   <td colname="col2"> <p>À des fins de référence, nous avons ajouté les attributs réservés <code> d_dst_filter</code> et <code> d_rs</code> aux attributs <code> d_</code> documentés. Nous vous déconseillons de créer des caractéristiques qui utilisent des attributs réservés. L'Adobe peut modifier les attributs réservés à tout moment. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-and-segment-qualification-reference.md"> Référence de qualification des traits</a> </p> </td> 
@@ -62,7 +62,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-privacy.md"> FAQ sur la rétention des données et la confidentialité</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une section sur la conservation des données de qualification des caractéristiques. </p> </td> 
+   <td colname="col2"> <p>Ajouté une section sur la conservation des données de qualification de caractéristiques. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/administration/usage-limits.md"> Limites d’utilisation</a> </p> </td> 
@@ -75,7 +75,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## October, 2017 {#oct-17}
+## Octobre 2017 {#oct-17}
 
 <table id="table_18C3AA0411CC4CBC98531BE735934E30"> 
  <thead> 
@@ -91,7 +91,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté <code> d_cts</code> en tant que paramètre facultatif dans la liste des clés disponibles pour les requêtes DCS. Vous devez contacter votre conseiller en Adobe Audience Manager ou le service à la clientèle pour l’activer. </p> </td> 
+   <td colname="col2"> <p>Ajouté <code> d_cts</code> en tant que paramètre facultatif dans la liste des clés disponibles pour les requêtes DCS. Vous devez contacter votre conseiller Adobe Audience Manager ou le service d’assistance clientèle pour l’activer. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/reporting-file-transfer-timeframe.md"> Incidence de la diffusion des données et des délais de traitement des fichiers sur les rapports</a> </p> </td> 
@@ -99,7 +99,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-api-methods.md"> Méthodes d’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>Vous pouvez envoyer des données au serveur de collecte de données à l’aide des méthodes GET ou POST. Ce document décrit la syntaxe à utiliser dans chaque cas. </p> </td> 
+   <td colname="col2"> <p>Vous pouvez envoyer des données au serveur de collecte de données à l’aide de méthodes de GET ou de POST. Ce document décrit la syntaxe à utiliser dans chaque cas. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-reporting.md"> FAQ sur la création de rapports</a> </p> </td> 
@@ -112,7 +112,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## September, 2017 {#sept-17}
+## septembre 2017 {#sept-17}
 
 <table id="table_8BA284C2CD324D5F988D9209D9078BE1"> 
  <thead> 
@@ -132,15 +132,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/media-data-integration/actionable-log-files.md"> Fichiers journaux pratiques</a> </p> </td> 
-   <td colname="col2"> <p>Découvrez pourquoi les fichiers <span class="wintitle"> journaux</span> activables sont la méthode recommandée pour importer des fichiers journaux DCM en <span class="keyword"> Audience Manager</span> et découvrez comment commencer à utiliser cette fonction. </p> </td> 
+   <td colname="col2"> <p>Découvrez pourquoi <span class="wintitle"> Actionable Log Files</span> est la méthode recommandée pour importer des fichiers journaux DCM dans <span class="keyword"> Audience Manager</span> et découvrez comment commencer à utiliser cette fonction. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-advertisers/import-dcm.md"> Importation de fichiers de données DCM dans Audience Manager</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté l’étape 7, sur ce que vous devez faire pour activer les fichiers journaux <span class="wintitle"></span> utilisables après avoir configuré l’importation du fichier de données DCM dans <span class="keyword"> l’Audience Manager</span>. </p> </td> 
+   <td colname="col2"> <p>Étape 7 Ajoutée, sur ce que vous devez faire pour activer les <span class="wintitle"> Fichiers journaux exploitables</span> après avoir configuré l’importation du fichier de données DCM dans <span class="keyword"> Audience Manager</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans le générateur de caractéristiques</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des opérateurs de comparaison pour identifier correctement ceux qui prennent en charge les expressions régulières. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des opérateurs de comparaison afin d’identifier correctement ceux qui prennent en charge les expressions régulières. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-details-page.md"> Page Détails des caractéristiques</a> </p> </td> 
@@ -152,7 +152,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../overview/data-security-and-privacy/data-privacy.md"> Confidentialité des données</a> </p> </td> 
-   <td colname="col2"> <p>Révision du contenu avec de nouveaux liens vers le Centre de traitement des données personnelles d’Adobe. </p> </td> 
+   <td colname="col2"> <p>Révision du contenu avec de nouveaux liens vers le Centre de traitement des données personnelles des Adobes. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/declared-ids.md#declared-id-targeting"> Ciblage de l’ID déclaré</a> </p> </td> 
@@ -161,7 +161,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## August, 2017 {#aug-17}
+## Août 2017 {#aug-17}
 
 <table id="table_A56DCFF49B78467B9600A8CE8F608094"> 
  <thead> 
@@ -181,7 +181,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-class-overview/dil-coopsafe.md"> isCoopSafe</a> </p> </td> 
-   <td colname="col2"> <p>Nouvelle configuration permettant de contrôler la manière dont les données sont envoyées à Device Co-op <span class="keyword"></span>Experience Cloud. </p> </td> 
+   <td colname="col2"> <p>Nouvelle configuration permettant de contrôler la manière dont les données sont envoyées à l'Experience Cloud Device Co-op</span> <span class="keyword">. </span></p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-profile-merge.md"> FAQ sur les stratégies de fusion de profils et la représentation graphique des appareils</a> </p> </td> 
@@ -190,7 +190,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  </tbody> 
 </table>
 
-## July, 2017 {#jul-17}
+## Juillet 2017 {#jul-17}
 
 <table id="table_5172A5D65C2841AE8B102B57F00C5FE7"> 
  <thead> 
@@ -210,11 +210,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/profile-merge-rules/merge-rule-unsegment.md"> Stratégies de fusion de profils et processus de suppression de la segmentation des appareils</a> </p> </td> 
-   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement de la non-segmentation avec les règles <span class="wintitle"> de fusion des</span>Profils. </p> </td> 
+   <td colname="col2"> <p>Nouveau contenu qui décrit le fonctionnement de la non-segmentation avec <span class="wintitle"> Profil Merge Rules</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder-data.md"> Données sur la population de segment et les caractéristiques dans le créateur de segments</a> </p> </td> 
-   <td colname="col2"> <p>Révision avec de nouvelles définitions qui expliquent comment les règles <span class="wintitle"> de fusion des</span> Profils affectent les numéros de rapports. </p> </td> 
+   <td colname="col2"> <p>Révision avec de nouvelles définitions qui expliquent comment <span class="wintitle"> Profil Merge Rules</span> affecte les numéros de rapports. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-data-buyers.md"> Audience Marketplace pour les acheteurs de données</a> </p> </td> 
@@ -222,12 +222,12 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté de nouvelles erreurs et du texte pour les ID d’erreur 307 et 306. </p> </td> 
+   <td colname="col2"> <p>Nouvelles erreurs et texte Ajoutés pour les ID d’erreur 307 et 306. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
-## June, 2017 {#jun-17}
+## Juin 2017 {#jun-17}
 
 <table id="table_C2E33C099A3F4942AA1BCCC5B7B4D05E"> 
  <thead> 
@@ -239,7 +239,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données</a> </td> 
-   <td colname="col2"> <p>Ajouté les erreurs de récupération de Profil 200, 201, 202 et 203. </p> </td> 
+   <td colname="col2"> <p>Ajoute les erreurs de récupération de Profil 200, 201, 202 et 203. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/rest-api-main/aam-api-getting-started.md#api-requirements-recommendations"> Configuration requise et recommandations pour l’API</a> </p> </td> 
@@ -259,7 +259,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/manage-folder-traits.md#edit-folder-trait"> Modification d’une description de dossier</a> </p> </td> 
-   <td colname="col2"> <p> Le processus <b><span class="uicontrol"> Modifier</span></b> vous permet de modifier la source de données pour les caractéristiques des dossiers. </p> </td> 
+   <td colname="col2"> <p> Le flux de travail <b><span class="uicontrol"> Edit</span></b> vous permet de modifier la source de données pour les caractéristiques des dossiers. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/manage-folder-traits.md#delete-folder-trait"> Suppression d’une description de dossier</a> </p> </td> 
@@ -283,11 +283,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder-data.md"> Données sur la population de segment et les caractéristiques dans le créateur de segments</a> </p> </td> 
-   <td colname="col2"> <p>Changement d’une mesure en Population <span class="wintitle"> totale de caractéristiques en passant de</span> Valorisations <span class="wintitle"></span>de caractéristiques uniques. </p> </td> 
+   <td colname="col2"> <p>Changement d’une mesure en <span class="wintitle"> Total Trait Population</span> de <span class="wintitle"> Valeurs des caractéristiques uniques</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder.md"> Suppression de caractéristiques d’un segment</a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur la façon de supprimer des caractéristiques d’un segment à l’aide du créateur <span class="wintitle"></span>de segments. </p> </td> 
+   <td colname="col2"> <p>Instructions sur la façon de supprimer des caractéristiques d’un segment à l’aide du créateur de segments <span class="wintitle"> </span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-manage-subscriptions.md"> Désactivation des flux de données : Pourquoi cela se produit et comment réagir</a> </p> </td> 
@@ -324,19 +324,19 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab-use-cases.md"> Cas d’utilisation d’Audience Lab</a> </p> </td> 
-   <td colname="col2"> <p>Une nouvelle section de notre documentation présente plusieurs cas d'utilisation de la fonction <span class="wintitle"> Audience Lab</span> . </p> </td> 
+   <td colname="col2"> <p>Une nouvelle section de notre documentation présente plusieurs cas d'utilisation de la fonction <span class="wintitle"> Audience Lab</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab-use-cases.md#compare-models"> Comparaison de modèles dans Audience Lab</a> </p> </td> 
-   <td colname="col2"> <p>Vous pouvez utiliser plusieurs types et sources de modèles différents en <span class="keyword"> Audience Manager</span>. <span class="wintitle"> Audience Lab</span> offres est un moyen facile de comparer les taux de conversion de vos clients, entre vos modèles actifs. </p> </td> 
+   <td colname="col2"> <p>Vous pouvez utiliser plusieurs types et sources de modèles différents dans <span class="keyword"> Audience Manager</span>. <span class="wintitle"> Audience </span> Labs offre un moyen facile de comparer les taux de conversion de vos clients, entre vos principaux modèles. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/audience-lab/audience-lab-use-cases.md#testing-creatives"> Test des éléments créatifs entre les destinations</a> </p> </td> 
-   <td colname="col2"> <p>Utilisez <span class="wintitle"> Audience Lab</span> pour mesurer le nombre de conversions qu'un créatif effectue sur différentes destinations. Ce cas d’utilisation vous permet également de mesurer les conversions du créatif par rapport aux conversions naturelles. </p> </td> 
+   <td colname="col2"> <p>Utilisez <span class="wintitle"> Audience Lab</span> pour mesurer le nombre de conversions qu’un créatif effectue sur différentes destinations. Ce cas d’utilisation vous permet également de mesurer les conversions du créatif par rapport aux conversions naturelles. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../faq/faq-profile-merge.md"> FAQ sur les règles de fusion de Profils</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté une nouvelle FAQ pour vous aider à répondre aux questions courantes sur la règle <span class="wintitle"> de fusion des</span> Profils et les graphiques des périphériques. </p> </td> 
+   <td colname="col1"> <p><a href="../faq/faq-profile-merge.md"> FAQ sur les règles de fusion de profils</a> </p> </td> 
+   <td colname="col2"> <p>Nous avons Ajouté une nouvelle FAQ pour vous aider à répondre aux questions courantes sur la <span class="wintitle"> règle de fusion de Profils</span> et le graphique de périphériques. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/algorithmic-models/understanding-models.md#understanding-traitweight"> Comprendre TraitWeight</a> </p> <p><a href="../features/algorithmic-models/understanding-models.md#models-summary-view"> Vue de résumé des modèles</a> </p> </td> 
@@ -357,15 +357,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p> <a href="../api/dcs-intro/dcs-event-calls/dcs-url-receive.md"> Réception de données du DCS</a> </p> </td> 
-   <td colname="col2"> <p>DCS HTTP response calls now contain the <code> tid</code> field. Utilisez ce champ à des fins de débogage en cas d’incident. </p> </td> 
+   <td colname="col2"> <p>Les appels de réponse HTTP DCS contiennent désormais le champ <code> tid</code>. Utilisez ce champ à des fins de débogage en cas d’incident. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/sending-audience-data/batch-data-transfer-explained/batch-data-transfer-overview.md"> Présentation de l’envoi de données par lots vers Audience Manager</a> </p> </td> 
-   <td colname="col2"> <p>Informations Ajoutées sur les emplacements d’environnement Production et Bêta pour le service Amazon S3. </p> </td> 
+   <td colname="col2"> <p>Informations Ajoutées sur les emplacements des environnements Production et Bêta pour le service Amazon S3. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-advertisers/segment-performance.md"> Rapport de performances sur les segments</a> </p> </td> 
-   <td colname="col2" morerows="2"> <p>Ajouté une note, précisant que les périodes de 7 jours et 30 jours de recherche en arrière ne sont disponibles que pour les dates du dimanche <b><span class="uicontrol"> au jour</span></b> . </p> </td> 
+   <td colname="col2" morerows="2"> <p>Ajouté une note précisant que les périodes de 7 jours et de 30 jours de recherche en amont ne sont disponibles que pour les dates du dimanche <b><span class="uicontrol"> Date jusqu'à</span></b>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/aor-advertisers/unique-user-reach.md"> Portée de l’utilisateur unique</a> </p> </td> 
@@ -382,11 +382,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
    <td colname="col2"> <p>Les révisions importantes comprennent de nouvelles informations et une réécriture et une réorganisation complètes de cette documentation. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/metadata-files-intro/datafiles-intro.md"> Fichiers de données pour les rapports d’optimisation d’Audience</a> </p> </td> 
+   <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/metadata-files-intro/datafiles-intro.md"> Fichiers de données pour les rapports d’Audience Optimization</a> </p> </td> 
    <td colname="col2"> <p>Révision du contenu pour indiquer ce qui suit : </p> 
     <ul id="ul_99C2ACF7B28F442B8F66A40525F1CAE3"> 
      <li id="li_679B6A359E7E471CBF377449EBC78827">Dans un nom de fichier, un trait de soulignement sépare le type d'événement de l’horodatage. </li> 
-     <li id="li_5012C420AC544B858246598575E59D8C">Avant le téléchargement, les fichiers doivent être compressés au format gzip et avoir une extension de <code> .gz</code> fichier. </li> 
+     <li id="li_5012C420AC544B858246598575E59D8C">Avant le téléchargement, les fichiers doivent être compressés au format gzip et avoir une extension de fichier <code> .gz</code>. </li> 
     </ul> </td> 
   </tr> 
   <tr> 
@@ -395,10 +395,10 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/demdex-calls.md"> Signification des appels vers le domaine Demdex</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté un nouveau document expliquant pourquoi <span class="keyword"> l’Audience Manager</span> appelle le <code> demdex.net</code> domaine. </p> </td> 
+   <td colname="col2"> <p>Ajouté un nouveau document expliquant pourquoi <span class="keyword"> Audience Manager</span> appelle le domaine <code> demdex.net</code>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://docs.adobe.com/content/help/fr-FR/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
+   <td colname="col1"> <p><a href="https://docs.adobe.com/content/help/en/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
    <td colname="col2"> <p>Révision et mise à jour avec de nouvelles informations. </p> </td> 
   </tr> 
  </tbody> 
@@ -416,15 +416,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"> <p><a href="../api/dcs-intro/dcs-api-reference/dcs-keys.md"> Attributs pris en charge pour les appels de l’API DCS</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des préfixes de variables clés avec <code> _p</code>, identification des paramètres privés en Audience Manager. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des préfixes de variables clés avec <code> _p</code>, identifiant les paramètres privés en Audience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-variable-prefixes.md"> Exigences de préfixe pour les variables clés</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des préfixes de variables clés avec <code> _p</code>, identification des paramètres privés en Audience Manager. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des préfixes de variables clés avec <code> _p</code>, identifiant les paramètres privés en Audience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-builder.md#create-segment"> Créez un segment</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté d’autres fonctionnalités de recherche et de filtrage à la recherche avancée <b><span class="uicontrol"> Parcourir toutes les caractéristiques</span></b> . </p> </td> 
+   <td colname="col2"> <p>Ajouté d’autres fonctionnalités de recherche et de filtrage à la recherche avancée <b><span class="uicontrol"> Parcourir tous les traits</span></b>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-dashboard.md"> Vue de la Liste de caractéristiques</a> </p> </td> 
@@ -444,7 +444,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/profile-merge-rules/merge-rules-overview.md"> Profile Link</a> </p> </td> 
-   <td colname="col2"> <p>Cette section contient du contenu nouveau et révisé pour prendre en charge les options de graphique de lien <span class="wintitle"> de</span> Profil et de périphérique tiers. </p> </td> 
+   <td colname="col2"> <p>Cette section contient du contenu nouveau et révisé afin de prendre en charge les options de graphique <span class="wintitle"> Profil Link</span> et de graphique de périphérique tiers. </p> </td> 
   </tr> 
  </tbody> 
 </table>
@@ -461,15 +461,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données</a> </td> 
-   <td colname="col2"> Ajouté des avertissements d’intégration aux codes d’erreur DCS. </td> 
+   <td colname="col2"> Avertissements d’intégration Ajoutés aux codes d’erreur DCS. </td> 
   </tr> 
   <tr> 
    <td colname="col1"><a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-file-name-contents.md#outbound-data-file-name-syntax-and-examples"> Nom du fichier de données sortantes : syntaxe et exemples</a> </td> 
-   <td colname="col2">Elément de nom de fichier facultatif Ajouté <code> PID-ALIAS</code> dans le fichier sortant. </td> 
+   <td colname="col2">Elément de nom de fichier facultatif <code> PID-ALIAS</code> Ajouté dans le fichier sortant. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/segments/segment-summary-view.md"> Affichage du résumé des segments</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté des périodes de recherche en arrière de 1, 14, 90 jours et de durée de vie pour la population de segments totale et en temps réel. </p> </td> 
+   <td colname="col2"> <p>Ajouté des périodes de recherche en amont de 1, 14, 90 jours et de durée de vie pour la population de segments totale et en temps réel. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="https://docs.adobe.com/content/help/en/core-services/interface/more-resources/dns-prefetch.html" format="https" scope="external"> Utilisation de la prérécupération DNS avec différentes solutions Experience Cloud</a> </p> </td> 
@@ -477,7 +477,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../dil/dil-class-overview/dil-create.md#dil-create"> Création DIL</a> </p> </td> 
-   <td colname="col2"> <p>Description révisée et ajout de liens connexes à la <code> containerSNID</code> propriété de <code> DIL.create</code>. </p> </td> 
+   <td colname="col2"> <p>Description révisée et ajout de liens connexes à la propriété <code> containerSNID</code> de <code> DIL.create</code>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/addressable-audiences.md#addressable-audience-metrics"> Mesures d'Audience adressables</a> </p> </td> 
@@ -510,7 +510,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../features/administration/usage-limits.md"> Limites d’utilisation</a> </td> 
-   <td colname="col2"> Ajouté la taille maximale de l’audience et des conseils sur la façon de la réduire à la documentation sur les limites d’utilisation. </td> 
+   <td colname="col2"> Taille maximale d’audience Ajoutée et conseils sur la façon de la réduire à la documentation sur les limites d’utilisation. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reporting/audience-optimization-reports/audience-optimization-reports.md"> Rapports d’Audience Optimization</a> </p> </td> 
@@ -518,7 +518,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/sending-audience-data/batch-data-transfer-explained/id-sync-file-based.md"> Exigences en matière de nom et de contenu pour les fichiers de synchronisation d’identifiants</a> </p> </td> 
-   <td colname="col2"> <p>Ajouté des fichiers d’exemple de synchronisation des identifiants et ajout d’une explication plus précise sur le fonctionnement du processus de synchronisation des identifiants. </p> </td> 
+   <td colname="col2"> <p>Des exemples de fichiers de synchronisation des identifiants Ajoutés et une explication plus précise du fonctionnement du processus de synchronisation des identifiants ont été ajoutés. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/algorithmic-models/understanding-models.md#models-summary-view"> Vue de résumé des modèles</a> </p> </td> 
@@ -526,7 +526,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../reference/ids-in-aam.md"> Index des identifiants dans Audience Manager</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour avec le format attendu pour les ID de dispositif portable (DAID) gérés par <span class="keyword"> Audience Manager</span>. </p> </td> 
+   <td colname="col2"> <p>Mise à jour avec le format attendu pour les ID de dispositif portable (DAID) géré par <span class="keyword"> Audience Manager</span>. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md">Exigences en matière de nom et de taille de fichier Amazon S3 pour les données entrantes…</a> </p> </td> 
@@ -534,7 +534,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../faq/faq-features.md"> FAQ sur les fonctions et fonctionnalités de produit</a> </p> </td> 
-   <td colname="col2"> <p>Nouvelle entrée Ajoutée qui décrit l’ID <span class="keyword"> d’organisation</span> Experience Cloud <span class="wintitle"></span>, y compris des informations sur la manière de le trouver. </p> </td> 
+   <td colname="col2"> <p>Nouvelle entrée Ajoutée qui décrit l'<span class="keyword"> Experience Cloud</span> <span class="wintitle"> ID d'organisation</span>, y compris des informations sur la façon de la trouver. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> 
@@ -542,11 +542,11 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
      <li id="li_EFAB62C108824AF8A56F93433D5259E4"><a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-template-macros.md">Macros de création de modèles sortants</a> (en anglais) </li> 
      <li id="li_9EC8F2B9D03446698C723871F63008F5"><a href="../integration/receiving-audience-data/batch-outbound-transfers/outbound-macro-examples.md"> Exemples de macro sortante</a> </li> 
     </ul> </td> 
-   <td colname="col2"> <p>Mise à jour afin d’inclure la <code> DPUUIDS</code> macro. </p> </td> 
+   <td colname="col2"> <p>Mise à jour afin d’inclure la macro <code> DPUUIDS</code>. </p> </td> 
   </tr> 
  </tbody> 
 </table>
 
 ## Années précédentes {#prev}
 
-Liens vers les notes de [!DNL Audience Manager] mise à jour et les modifications apportées à la documentation. Pour obtenir une archive des anciennes modifications au [!DNL Experience Cloud] niveau, reportez-vous à la section Notes [de mise à jour](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) précédentes.
+Liens vers les notes de mise à jour et les modifications apportées à la documentation de [!DNL Audience Manager]. Pour obtenir une archive des anciennes modifications au niveau [!DNL Experience Cloud], consultez la section [Notes de mise à jour précédentes](https://docs.adobe.com/content/help/en/release-notes/experience-cloud/current.html).
